# ai_engineering

./: .gitignore  README.md  pyproject.toml
01_ai_system_design/: README.md
04_evals/: README.md
07_rag/: README.md
08_mcp/: README.md
08_mcp/advance_mcp/: main.py
08_mcp/advance_mcp/frontend/: package-lock.json  package.json
08_mcp/advance_mcp/frontend/src/: App.jsx  main.jsx
08_mcp/learning_mcp/: fastapi-mcp_calculator.py  fastmcp_calculator.py  fastmcp_http_calculator.py
